[gd_scene load_steps=10 format=3 uid="uid://dfefb7wjmqox3"]

[ext_resource type="Script" path="res://Source/UI/hud.gd" id="1_r0twu"]
[ext_resource type="PackedScene" uid="uid://bfbwcptx5w4c3" path="res://Scenes/UI/Healthbar.tscn" id="2_nles8"]
[ext_resource type="Texture2D" uid="uid://of63777nyawj" path="res://Assets/SVG/timer.svg" id="3_vrrdd"]
[ext_resource type="Texture2D" uid="uid://cfmnc5w2l84co" path="res://Assets/Victory screen/+A.svg" id="4_lway3"]
[ext_resource type="FontFile" uid="uid://b7j04d6lvtj3g" path="res://Assets/VCR_OSD_MONO_1.001(1).ttf" id="4_vrkai"]
[ext_resource type="Texture2D" uid="uid://b1gc650osjwad" path="res://Assets/Victory screen/play_again_button_1.svg" id="6_jupge"]
[ext_resource type="Texture2D" uid="uid://gt0nod823s7" path="res://Assets/Victory screen/play_again_button_2.svg" id="7_sfih4"]

[sub_resource type="LabelSettings" id="LabelSettings_mcdoc"]
font = ExtResource("4_vrkai")
font_size = 40
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_n75ql"]
font = ExtResource("4_vrkai")
font_size = 55

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r0twu")
player_1_color = Color(0.87451, 0.443137, 0.14902, 1)
player_2_color = Color(0.027451, 0.482353, 0.87451, 1)

[node name="Player1Healthbar" parent="." instance=ExtResource("2_nles8")]
layout_direction = 2
layout_mode = 1
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 10.0
offset_top = 10.0
offset_right = 10.0
offset_bottom = 10.0
grow_horizontal = 1
grow_vertical = 1
scale = Vector2(0.5, 0.5)

[node name="Player2Healthbar" parent="." instance=ExtResource("2_nles8")]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_bottom = 0.0
offset_left = -10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 10.0
grow_horizontal = 0
grow_vertical = 1
scale = Vector2(-0.5, 0.5)

[node name="RoundTimer" type="Timer" parent="."]

[node name="TimerTexture" type="TextureRect" parent="."]
custom_minimum_size = Vector2(24, 11)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -84.0
offset_top = 27.0
offset_right = 84.0
offset_bottom = 87.0
grow_horizontal = 2
texture = ExtResource("3_vrrdd")
expand_mode = 1

[node name="SecondsLabel" type="Label" parent="TimerTexture"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -68.0
offset_top = -36.0
offset_right = -10.0
offset_bottom = 36.0
grow_horizontal = 0
grow_vertical = 2
text = "60"
label_settings = SubResource("LabelSettings_mcdoc")
vertical_alignment = 1

[node name="MinutesLabel" type="Label" parent="TimerTexture"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = -36.0
offset_right = 78.0
offset_bottom = 36.0
grow_vertical = 2
text = "60"
label_settings = SubResource("LabelSettings_mcdoc")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Player1Grade" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = 40.0
offset_top = 56.0
offset_right = 210.0
offset_bottom = 216.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_lway3")

[node name="Player2Grade" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = 856.0
offset_top = 64.0
offset_right = 1026.0
offset_bottom = 224.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_lway3")

[node name="PlayAgainButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -120.0
offset_top = -160.0
offset_right = 280.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.6, 0.6)
texture_normal = ExtResource("6_jupge")
texture_pressed = ExtResource("7_sfih4")
texture_hover = ExtResource("6_jupge")
texture_disabled = ExtResource("6_jupge")
texture_focused = ExtResource("6_jupge")

[node name="Label" type="Label" parent="PlayAgainButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
text = "Play Again"
label_settings = SubResource("LabelSettings_n75ql")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[connection signal="timeout" from="RoundTimer" to="." method="_on_round_timer_timeout"]
[connection signal="button_down" from="PlayAgainButton" to="." method="_on_play_again_button_button_down"]
[connection signal="button_up" from="PlayAgainButton" to="." method="_on_play_again_button_button_up"]
[connection signal="pressed" from="PlayAgainButton" to="." method="_on_play_again_button_pressed"]
